# pcam5c-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap.sh  config.sh
cmake/Modules/: mkimage.cmake  qtplatz-build.cmake  standalone.cmake  u-boot.cmake  version.cmake
scripts/: gpio-all.sh
src/: CMakeLists.txt
src/dgctl/: CMakeLists.txt  main.cpp  pretty_print.cpp  pretty_print.hpp
src/drivers/: .gitignore  CMakeLists.txt
src/drivers/csi2rx/: CMakeLists.txt  csi2rx.c  csi2rx.h
src/drivers/d_phyrx/: CMakeLists.txt  d_phyrx.c  d_phyrx.h
src/drivers/dgmod/: CMakeLists.txt  dgmod.c  dgmod.h
src/drivers/dkms/: Makefile.in  dkms.cmake  dkms.conf  init.d-generic.sh  postinst.in  prerm.in
src/drivers/ov5640/: CMakeLists.txt  ov5640.c  ov5640.h
src/drivers/ov5640-gpio/: CMakeLists.txt  ov5640-gpio.c  ov5640-gpio.h
src/drivers/template/: Makefile.in
src/drivers/vdma/: CMakeLists.txt  vdma.c  vdma.h
src/pcam5c/: CMakeLists.txt  csi2rx.cpp  csi2rx.hpp  d_phyrx.cpp  d_phyrx.hpp  gpio.cpp  gpio.hpp  i2c.cpp  i2c.hpp  main.cpp  ov5640.c  ov5640.cpp  ov5640.hpp  pcam5c.cpp  pcam5c.hpp  uio.cpp  uio.hpp
